<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="calculator_name">Calculatrice</string>
    <string name="user_name">Liste des Utilisateurs</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_x">×</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="divide">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="Clear">AC</string>
    <string name="_3">3</string>
    <string name="moins">-</string>
    <string name="plus">+</string>
    <string name="virgule">,</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="plus_moins">+/-</string>
    <string name="percent">%</string>
    <string name="textview_1">TextView 1</string>
    <string name="textview_2">textView 2</string>
    <string name="textview_3">textView 3</string>
    <string name="textview_4">textView 4</string>
    <string name="calcul_to_tell">calcul to tel</string>

</resources>
